<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="goto_start">Library</string>
    <string name="refresh_servers_list">Refresh server list</string>
    <string name="enable_network_shares">Enable network shares</string>
    <string name="initial_scan">Initial scan</string>
    <string name="search_title">Search</string>
    <string name="unknown_track_name">Unknown</string>
    <string name="info">Info</string>
    <string name="play_selection">Play</string>
    <string name="multiple_selection">Multiple selection</string>
    <string name="play_from_beginning">Play from beginning</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="info_duration">Duration</string>
    <string name="video_sources">Sources</string>
    <string name="info_tab_movie">Movie</string>
    <string name="info_tab_show">Show</string>
    <string name="info_tab_episode">Episode</string>
    <string name="info_tab_video">Video</string>
    <string name="info_tab_file">File info</string>
    <string name="info_tab_backdrop_chooser">Backdrop chooser</string>
    <string name="info_tab_poster_chooser">Poster chooser</string>
    <string name="info_tab_share">Share</string>
    <string name="info_menu_backdrop_select">Backdrop</string>
    <string name="info_menu_series_backdrop_select">Series Backdrop</string>
    <string name="info_menu_poster_select">Select another poster</string>
    <string name="info_menu_series_poster_select">Select another poster</string>
    <string name="watching_up_next">Watching/Up next</string>
    <string name="recently_added">Recently added</string>
    <string name="recently_added_videos">Recently added</string>
    <string name="recently_played">Recently played</string>
    <string name="recently_played_videos">Recently played</string>
    <string name="new_and_unwatched">New to watch</string>
    <string name="new_and_unwatched_videos">New to watch</string>
    <string name="keep_watching">Keep watching</string>
    <string name="keep_watching_videos">Keep watching</string>
    <string name="video_lists">Playlists</string>
    <string name="external_storage">External</string>
    <string name="internal_storage">Internal</string>
    <string name="network_storage">Network</string>
    <string name="sd_card_storage">SD card</string>
    <string name="usb_host_storage">External drive</string>
    <string name="other_storage">Drive</string>
    <string name="network_media_servers">Media servers (UPnP)</string>
    <string name="network_shared_folders">Shared folders (SMB)</string>
    <string name="network_connected_as">Connected as %s</string>
    <string name="network_guest">guest</string>
    <string name="sftp_folders">FTP</string>
    <string name="network_jcifs">Samba (Experimental)</string>
    <string name="resume">Resume</string>
    <string name="scrap_director">Director</string>
    <string name="scrap_rating">Rating</string>
    <string name="scrap_cast">Cast</string>
    <string name="scrap_aired">Aired</string>
    <string name="scrap_guests">Guests</string>
    <string name="scraper_settigns">Posters &amp; info</string>
    <string name="storage">Storage</string>
    <string name="rescan_storage">Rescan storage</string>
    <string name="rescan_storage_summary">Rescan internal, SD Card and USB storage devices</string>
    <string name="preference_display_all_files">Display all files in browser</string>
    <string name="preference_display_all_files_summary">Display non-video files too</string>
    <string name="info_video">Video</string>
    <string name="info_audio">Audio</string>
    <string name="info_subtitle">Subtitle</string>
    <string name="info_resume">Resume position</string>
    <string name="info_bookmark">Bookmark position</string>
    <string name="get_subtitles_on_drive">Select subtitles on storage</string>
    <string name="get_subtitles_online">Get subtitles online</string>
    <string name="upgrade_to_add_free_version">Upgrade to ad-free version</string>
    <string name="upgrade_to_add_free_version_description">Buy the application license to remove the ads and enable all the features</string>
    <string name="preferences_category_complete">Full version</string>
    <string name="preferences_category_video">Video</string>
    <string name="preferences_force_software_decoding">Force software decoding</string>
    <string name="preferences_force_software_decoding_summary">You may try this option if some videos are not playing correctly</string>
    <string name="preferences_force_audio_passthrough">Audio passthrough</string>
    <string name="preferences_force_audio_passthrough_summary">Transmit compressed audio over HDMI or S/PDIF. ⚠ Experimental may result in A/V out of sync</string>
    <string name="preferences_allow_3rd_party_player">Allow using another video player</string>
    <string name="preferences_allow_3rd_party_player_summary">Other compatible video player applications will be proposed by Android when launching a video playback. Be aware that some features will not work (resume, bookmarks, etc.)</string>
    <string name="preference_tv_3d_automatic_switch">Enable automatic 3D TV switch</string>
    <string name="preference_tv_3d_automatic_switch_summary">Use this feature only if your 3D TV supports it</string>
    <string name="preference_tv_refreshrate_switch">Enable automatic refresh rate switch</string>
    <string name="preference_tv_refreshrate_switch_summary">Remove judder effect by adapting best screen refresh rate to video frame rate (device support may vary)</string>
    <string name="category_languages">Subtitles</string>
    <string name="subtitles_hide_default">Hide subtitles by default</string>
    <string name="subtitles_hide_default_summary">Check if you want to hide subtitles by default</string>
    <string name="preferences_languages">Subtitles download languages</string>
    <string name="summary_list_preference_primary">Select your languages for downloading subtitles</string>
    <string name="favSubLang_title">Subtitles reading language</string>
    <string name="favSubLang_summary">Choose your favorite language for reading subtitles</string>
    <string name="ui_mode_title">User interface mode</string>
    <string name="ui_mode_summary">Choose between TV and Tablet/Phone UI</string>
    <string name="preferences_video_about">About</string>
    <string name="preferences_video_os_text">Subtitles provided by</string>
    <string name="preferences_video_tmdb_text">Movie/TV Show information provided by</string>
    <string name="preferences_video_tvdb_text">TV Show informations provided by</string>
    <string name="preferences_video_trakt_text">Video scrobbler provided by</string>
    <string name="preferences_video_licenses">Licenses</string>
    <string name="preferences_network_mobile_vpn_summary">Use it only with VPN configuration, and beware of your data usage.</string>
    <string name="preferences_network_mobile_vpn_title">Enable network share on mobile connection</string>
    <string name="preferences_video_advanced">Advanced</string>
    <string name="preferences_video_advanced_quit_title">Regular preferences</string>
    <string name="preferences_video_advanced_quit_summary">Get back to regular preferences</string>
    <string name="tv_scraper">TV Shows</string>
    <string name="movie_scraper">Movies</string>
    <string name="enable_auto_scrap">Automatically get info for new videos</string>
    <string name="network_bookmarks">Resume points and position bookmarks on network</string>
    <string name="network_thumbnails">Create remote thumbnails</string>
    <string name="network_thumbnails_summary">Create thumbnails from remote videos when no poster available</string>
    <string name="network_bookmarks_summary">Save and check for resume point and position bookmarks on network when possible</string>
    <string name="network_nfo_parse">Process \'.nfo\' files</string>
    <string name="network_nfo_parse_summary">Read Kodi \'.nfo\' files during (re-)scanning to gather media information and posters.</string>
    <string name="dec_choice_title">Choose decoder</string>
    <string name="dec_choice_summary">Advanced preference, may break video decoding.</string>
    <string name="preferences_user_interface">User Interface</string>
    <string name="preferences_display_resume_box_summary">Display or hide the button resuming the latest video in the main screen</string>
    <string name="preferences_display_resume_box">Display resume box</string>
    <string name="preferences_leanback_user_interface">TV User Interface</string>
    <string name="preferences_show_last_added_row_summary">Check to show a row with your last added media</string>
    <string name="preferences_show_last_added_row">Show last added row</string>
    <string name="preferences_show_last_played_row_summary">Check to show a row with your last played media</string>
    <string name="preferences_show_last_played_row">Show last played row</string>
    <string name="preferences_reset_last_played_row">Reset last played row</string>
    <string name="preferences_show_all_movies_row_summary">Check to show a row with all your movies instead of the movie categories row</string>
    <string name="preferences_show_all_movies_row">Show all movie row</string>
    <string name="preferences_movie_sort_order_summary">Select the sort order of the all movie row</string>
    <string name="preferences_movie_sort_order_title">All movie row sort order</string>
    <string name="preferences_show_all_tv_shows_row_summary">Check to show a row with all your TV shows instead of the TV show categories row</string>
    <string name="preferences_show_all_tv_shows_row">Show all TV show row</string>
    <string name="preferences_tv_show_sort_order_summary">Select the sort order of the all TV show row</string>
    <string name="preferences_tv_show_sort_order_title">All TV show row sort order</string>
    <string name="codepage_title">Subtitles encoding</string>
    <string name="codepage_summary">Set the encoding used in text subtitles</string>
    <string name="torrent_category">Torrent</string>
    <string name="torrent_path">Download path</string>
    <string name="torrent_blocklist">Blocklist</string>
    <string name="category_trakt">Trakt</string>
    <string name="trakt_signin_dialog_title">Sign in</string>
    <string name="trakt_signin_title">Sign In</string>
    <string name="trakt_wipe_dialog_title">Sign out of Trakt.tv\?</string>
    <string name="trakt_wipe_title">Sign out of Trakt.tv</string>
    <string name="trakt_live_scrobbling_title">Live scrobbler</string>
    <string name="trakt_live_scrobbling_summary">Share videos being watched on Trakt</string>
    <string name="trakt_getfull_summary">Trakt scrobbler is only available with paid version</string>
    <string name="trakt_sync_collection_title">Synchronize TV show and movie collections</string>
    <string name="trakt_sync_trakt_resume_title">Sync trakt resume position</string>
    <string name="trakt_sync_trakt_resume">Use trakt resume position when more advanced than local</string>
    <string name="trakt_sync_collection_summary">Automatically add all videos from your Nova library to your Trakt collection</string>
    <string name="interface_size">Interface size</string>
    <string name="interface_size_summary">Change this in case the user interface is too small or too large</string>
    <string name="rescrap_all_title">Rescrape all</string>
    <string name="nfo_export_manual_title">Export already scraped videos</string>
    <string name="nfo_export_manual_summary">Export .nfo files of every already scraped videos</string>
    <string name="db_export_manual_title">Export media database</string>
    <string name="db_export_manual_summary">Export media.db file to /sdcard for debug purposes</string>
</resources>